--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,20 @@
+/*@font-face {
+  font-family: "Flat-UI-Icons";
+  src: url("../fonts/Startup-Icons.eot");
+  src: url("../fonts/Startup-Icons.eot?#iefix") format("embedded-opentype"), url("../fonts/Startup-Icons.woff") format("woff"), url("../fonts/Startup-Icons.ttf") format("truetype"), url("../fonts/Startup-Icons.svg#Flat-UI-Icons") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}*/
+@font-face {
+  font-family: "Canter Bold";
+  src: url("../fonts/Canter-Bold.otf");
+}
+
+@font-face {
+  font-family: "Canter Light";
+  src: url("../fonts/Canter-Light.otf");
+}
+
 /* ! normalize.css v1.0.0 | MIT License | git.io/normalize */
  
 /* ==========================================================================
@@ -29,9 +46,11 @@ html { font-size: 100%; /* 1 */
 html, html a { -webkit-font-smoothing: antialiased; text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.004); }
 /* * Addresses `font-family` inconsistency between `textarea` and other form
 * elements. */
-html, button, input, select, textarea { font-family: 'Varela Round', sans-serif; }
+/*html, button, input, select, textarea { font-family: 'Varela Round', sans-serif; }*/
+html, button, input, select, textarea { font-family: 'Canter Bold', sans-serif; }
 /* * Addresses margins handled incorrectly in IE 6/7. */
-body { margin: 0; font-family: 'Varela Round', sans-serif; }
+/*body { margin: 0; font-family: 'Varela Round', sans-serif; }*/
+body { margin: 0; font-family: 'Canter Bold', sans-serif; font-size: 25px;}
 /* ==========================================================================
 Links
 ========================================================================== */
@@ -46,8 +65,8 @@ Typography
 /* * Addresses font sizes and margins set differently in IE 6/7.
 * Addresses font sizes within `section` and `article` in Firefox 4+, Safari 5, * and Chrome. */
  
-h1 { font-size: 2em; margin: 0.67em 0; color: #353535; }
-h2 { font-size: 1.5em; margin: 0.83em 0; }
+h1 { font-family: 'Canter Light' font-size: 2em; margin: 0.67em 0; color: #353535; }
+h2 { font-family: 'Canter Light' font-size: 1.5em; margin: 0.83em 0; }
 h3 { font-size: 1.17em; margin: 1em 0; }
 h4 { font-size: 1em; margin: 1.33em 0; }
 h5 { font-size: 0.83em; margin: 1.67em 0; }
@@ -173,8 +192,8 @@ Global Styles
 ========================================================================== */
 a { color: #353535; -webkit-transition: all 0.5s; -moz-transition: all 0.5s; -o-transition: all 0.5s; transition: all 0.5s; }
 a:hover, a:focus { color: #3dc9b3; text-decoration: none; }
-p { color: #8c9398; word-spacing: 1px; line-height: 25px; font-size: 14px; }
-h2 { font-size: 15px; color: #353535; text-transform: uppercase; font-weight: bold; }
+p { color: #8c9398; word-spacing: 1px; line-height: 25px; font-size: 30px; }
+h2 { font-size: 15px; color: #353535; /*text-transform: uppercase; font-weight: bold;*/ }
 h2::after { content: " "; border: solid 2px #3dc9b3; display: block; width: 35px; margin: 25px auto; }
 .section-padding { padding: 90px 0 100px }
 .dark-bg { background: #f3f5f8; }
@@ -213,7 +232,7 @@ nav ul li a:hover, nav ul li a:focus { text-decoration: none; color: rgba(255, 2
 Hero
 ========================================================================== */
 .hero { background: url('../img/hero-bg.jpg') no-repeat center center; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover; padding: 65px 0 300px 0; height: auto; }
-.hero h1 { font-size: 40px; letter-spacing: 12px; margin: 10px; }
+.hero h1 { font-family: 'Canter Light'; font-size: 100px; /*letter-spacing: 12px;*/ margin: 10px; }
 .hero h1 span { color: #a1a9b0; display: inline-block; }
 .hero p { letter-spacing: 1px; }
 .learn-more-btn { background: rgba(61, 201, 179, 1); padding: 20px 40px; border-radius: 5px; -moz-border-radius: 5px; -webkit-border-radius: 5px; -o-border-radius: 5px; color: #fff; text-transform: uppercase; letter-spacing: 1px; display: inline-block; -webkit-box-shadow: 0px 3px 0px 0px #309383; -moz-box-shadow: 0px 3px 0px 0px #309383; box-shadow: 0px 3px 0px 0px #309383; margin: 60px 0 0; font-weight: bold; }
@@ -223,7 +242,7 @@ Intro
 ========================================================================== */
 .intro { background: #f3f5f8; }
 .intro p { margin: 50px 0 0; }
-h1.arrow { font-size: 15px; text-transform: uppercase; color: #353535; letter-spacing: 1px; background: url('../img/h1-bg.png') no-repeat center bottom; padding-bottom: 30px; font-weight: bold; }
+h1.arrow { font-family: 'Canter Light'; font-size: 60px; text-transform: uppercase; color: #353535; /*letter-spacing: 1px;*/ /*background: url('../img/h1-bg.png') no-repeat center bottom;*/ padding-bottom: 30px; /*font-weight: bold;*/ }
 /* ==========================================================================
 Features
 ========================================================================== */
@@ -240,8 +259,8 @@ iPhone Section
 Swag
 ========================================================================== */
 .swag { background: url('../img/plants-bg.jpg') no-repeat center center; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover; background-attachment: fixed; padding: 50px 0; }
-.swag h1 { color: #fff; font-size: 40px; text-transform: uppercase; letter-spacing: 5px; }
-.swag h1 span { display: block; font-size: 25px; margin-top: 20px; }
+.swag h1 { font-family: 'Canter Light'; color: #fff; font-size: 60px; text-transform: uppercase; /*letter-spacing: 5px;*/ }
+.swag h1 span { display: block; font-size: 40px; margin-top: 20px; }
 .down-arrow-btn { width: 40px; height: 40px; border-radius: 50%; -moz-border-radius: 50%; -webkit-border-radius: 50%; -o-border-radius: 50%; background: rgba(61, 201, 179, 0.8); display: inline-block; margin: 10px auto 20px; color: #fff; font-size: 16px; line-height: 40px; text-align: center; }
 .down-arrow-btn:hover, .down-arrow-btn:focus { color: #fff; background: rgba(61, 201, 179, 1); }
 /* ==========================================================================
@@ -268,9 +287,9 @@ a.expand { display: block; position: absolute; z-index: 100; text-align: center;
 Subscribe
 ========================================================================== */
 .subscribe { background: url('../img/keyboard-bg.jpg') no-repeat center center; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover; background-attachment: fixed; padding: 120px 0 140px; }
-.subscribe h1 { color: #fff; margin-bottom: 40px; }
-.subscribe h1 span { display: block; font-size: 15px; text-transform: uppercase; font-weight: bold; margin-top: 20px; letter-spacing: 1px; }
-.subscribe input[type=text] { background-color: rgba(255, 255, 255, 0.1); border: solid 1px #fff; padding: 20px; width: 30%; color: #fff; }
+.subscribe h1 { font-family: 'Canter Light'; color: #fff; margin-bottom: 40px; }
+.subscribe h1 span { display: block; font-size: 60px; text-transform: uppercase; /*font-weight: bold; */margin-top: 20px;/* letter-spacing: 1px;*/ }
+.subscribe input[type=text] { background-color: rgba(255, 255, 255, 0.1); border: solid 1px #fff; padding: 20px; width: 50%; color: #fff; }
 .subscribe input[type=submit] { background: rgba(61, 201, 179, 0.5); border: solid 1px rgba(61, 201, 179, 0.5); padding: 20px; color: #fff; text-transform: uppercase; letter-spacing: 1px; transition: all 0.5s ease; -moz-transition: all 0.5s ease; -webkit-transition: all 0.5s ease; -o-transition: all 0.5s ease; }
 .subscribe input[type=submit]:hover { background: rgba(61, 201, 179, 1); border: solid 1px rgba(61, 201, 179, 1); color: #fff; }
 /* ==========================================================================
@@ -296,7 +315,7 @@ Contact
 .up-btn:hover, up-btn:focus { color: #fff; background: rgba(61, 201, 179, 1); }
 .contact-details { margin: 70px 0; }
 .contact-details h2 { font-size: 20px; }
-.contact-details h2 span { display: block; color: #3dc9b3; text-transform: uppercase; letter-spacing: 1px; font-size: 14px; margin-top: 15px; }
+.contact-details h2 span { display: block; color: #3dc9b3; text-transform: uppercase; /*letter-spacing: 1px;*/ font-size: 40px; margin-top: 15px; }
 .contact-wrap { position: relative; }
 /* ==========================================================================
 Footer
