--- a/css/styles.css
+++ b/css/styles.css
@@ -241,7 +241,7 @@ Hero
 Intro
 ========================================================================== */
 .intro { background: #f3f5f8; }
-.intro p { margin: 50px 0 0; }
+/*.intro p { margin: 50px 0 0; }*/
 h1.arrow { font-family: 'Canter Light'; font-size: 60px; text-transform: uppercase; color: #52403D; /*letter-spacing: 1px;*/ /*background: url('../img/h1-bg.png') no-repeat center bottom;*/ padding-bottom: 30px; /*font-weight: bold;*/ }
 /* ==========================================================================
 Features
